# liquid

./: .gitignore  CMakeLists.txt  README.md  makebinary.bat  makebinary.sh  vcpkg.json
include/: getopt.h  imageHandler.h
src/: argparser.cpp  imageHandler.cpp  main.cpp
